<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_exhibition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_exhibition"
        android:textColor="@color/gray_light"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo" />


    <LinearLayout
        android:id="@+id/rv_exhibition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_exhibition">

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_brief"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_brief"
        android:textColor="@color/gray_light"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_exhibition" />

    <LinearLayout
        android:id="@+id/rv_brief"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_brief">

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_more_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_more_popular"
        android:textColor="@color/gray_light"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_brief" />

    <LinearLayout
        android:id="@+id/rv_more_popular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_more_popular">

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

        <include layout="@layout/item_movie_loading" />

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.facebook.shimmer.ShimmerFrameLayout>