<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_0"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ImageBanner"
                tools:src="@tools:sample/avatars" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/guide_375" />

            <ImageView
                android:id="@+id/image_back"
                android:layout_width="@dimen/size_50"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_poster"
                android:layout_width="@dimen/size_159"
                android:layout_height="@dimen/size_203"
                android:layout_marginEnd="@dimen/margin_32"
                android:layout_marginBottom="@dimen/margin_32"
                android:elevation="@dimen/elevation_12"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="@+id/image_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/ImageMovie"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="@dimen/size_150"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:fontFamily="@font/open_sans"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="@dimen/text_21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/image_poster"
                tools:text="Avengers" />

            <TextView
                android:id="@+id/duration_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                style="@style/text_openSans_grey_13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="1 hora(s) 39 minuto(s)" />

            <TextView
                android:id="@+id/text_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_2"
                style="@style/text_openSans_grey_13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duration_time"
                tools:text="Action • Super Hero" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_4"
                android:src="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_genre" />

            <TextView
                android:id="@+id/text_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2"
                android:layout_marginTop="@dimen/margin_4"
                style="@style/text_openSans_grey300_13"
                app:layout_constraintStart_toEndOf="@+id/star"
                app:layout_constraintTop_toTopOf="@+id/star"
                tools:text="8.9" />

            <TextView
                android:id="@+id/text_vote_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_2"
                android:layout_marginTop="@dimen/margin_4"
                android:text="@string/text_vote"
                style="@style/text_openSans_grey300_13"
                app:layout_constraintStart_toEndOf="@+id/text_vote"
                app:layout_constraintTop_toTopOf="@+id/star" />

            <TextView
                android:id="@+id/synopsys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/synopsys"
                style="@style/text_openSans_grey_21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_banner" />

            <TextView
                android:id="@+id/text_desc_synopsys"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                style="@style/text_openSans_grey_12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsys"
                tools:text="The Asgardian Loki encounters the Other, the leader of an
         extraterrestrial race known as the Chitauri. In exchange for retrieving
         the Tesseract..." />

            <TextView
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/comments"
                style="@style/text_openSans_grey_21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_desc_synopsys" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comments"
                android:layout_width="@dimen/size_0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@drawable/background_recycler_comments"
                android:visibility="visible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comments"
                tools:itemCount="3"
                tools:listitem="@layout/item_comments" />

            <TextView
                android:id="@+id/text_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/empty_comments"
                android:textAlignment="center"
                android:textSize="@dimen/text_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comments" />


            <TextView
                android:id="@+id/more_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/more_like"
                style="@style/text_openSans_grey_21"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_comments" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_more_like"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/more_like"
                tools:listitem="@layout/item_movie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>